--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NovaCore Digital | Future-Proof Consulting</title>
-    <!-- Favicon fix -->
+    <title>NovaCore Digital | Future-Proof Enterprise Solutions</title>
+    
+    <!-- Favicon Fix -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
     
     <!-- Bootstrap 5 CSS -->
@@ -19,66 +19,122 @@
             --nc-blue: #0d6efd;
             --nc-dark: #0f172a;
             --nc-slate: #64748b;
+            --nc-light: #f8fafc;
         }
+
         body {
             font-family: 'Inter', sans-serif;
             color: var(--nc-dark);
-            background-color: #f8fafc;
-            overflow-x: hidden;
+            background-color: var(--nc-light);
+            scroll-behavior: smooth;
         }
+
         .navbar {
-            transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.8);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.85);
+            border-bottom: 1px solid rgba(0,0,0,0.05);
         }
+
         .navbar.scrolled {
-            padding: 0.5rem 0;
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+            padding: 0.6rem 0;
+            background: rgba(255, 255, 255, 0.95);
+            box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);
         }
+
+        .nav-link {
+            font-weight: 500;
+            color: var(--nc-slate) !important;
+            position: relative;
+        }
+
+        .nav-link.active {
+            color: var(--nc-blue) !important;
+        }
+
+        .nav-link.active::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 10%;
+            width: 80%;
+            height: 2px;
+            background: var(--nc-blue);
+        }
+
         .hero-section {
-            padding: 160px 0 100px;
-            background: radial-gradient(circle at top left, #eff6ff, transparent),
-                        radial-gradient(circle at bottom right, #f0fdf4, transparent);
+            padding: 180px 0 120px;
+            background: radial-gradient(circle at 10% 20%, rgba(13, 110, 253, 0.05) 0%, transparent 40%),
+                        radial-gradient(circle at 90% 80%, rgba(16, 185, 129, 0.05) 0%, transparent 40%);
         }
+
         .btn-primary {
             background-color: var(--nc-blue);
             border: none;
-            padding: 12px 30px;
-            font-weight: 600;
-            border-radius: 8px;
+            padding: 14px 36px;
+            font-weight: 700;
+            border-radius: 12px;
+            box-shadow: 0 10px 15px -3px rgba(13, 110, 253, 0.3);
+            transition: all 0.3s ease;
         }
+
+        .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 20px 25px -5px rgba(13, 110, 253, 0.4);
+            background-color: #0b5ed7;
+        }
+
         .card {
-            border: 1px solid #e2e8f0;
-            border-radius: 16px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid rgba(0,0,0,0.05);
+            border-radius: 20px;
+            transition: all 0.3s ease;
+            background: white;
         }
+
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1);
+            transform: translateY(-8px);
+            box-shadow: 0 25px 50px -12px rgba(0,0,0,0.08);
+            border-color: var(--nc-blue);
         }
-        .ai-advisor-box {
+
+        .ai-card {
             background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
             color: white;
-            border-radius: 24px;
-            padding: 40px;
+            border-radius: 28px;
+            padding: 50px;
+            border: none;
         }
-        #page-content {
-            min-height: 70vh;
+
+        .page-header {
+            background: var(--nc-dark);
+            color: white;
+            padding: 140px 0 80px;
+            text-align: center;
         }
-        .fade-in {
-            animation: fadeIn 0.5s ease forwards;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+
         .footer {
             background: var(--nc-dark);
             color: #94a3b8;
-            padding: 60px 0;
+            padding: 80px 0 40px;
+        }
+
+        .fade-in {
+            animation: fadeIn 0.6s ease-out forwards;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(15px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .service-icon {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            display: inline-block;
         }
     </style>
-<script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
@@ -89,16 +145,17 @@
 </script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="mainNav">
         <div class="container">
-            <a class="navbar-brand fw-bold tracking-tighter" href="#home" onclick="navigateTo('home')">
+            <a class="navbar-brand fw-bold tracking-tighter" href="#home">
                 NOVA<span class="text-primary">CORE</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto fw-medium">
+                <ul class="navbar-nav ms-auto gap-2">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#advisor">AI Advisor</a></li>
@@ -113,25 +170,40 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-4 text-center text-md-start">
-                    <h4 class="text-white fw-bold mb-0">NOVA<span class="text-primary">CORE</span></h4>
+            <div class="row g-4 justify-content-between">
+                <div class="col-lg-4">
+                    <h3 class="text-white fw-bold mb-4">NOVA<span class="text-primary">CORE</span></h3>
+                    <p>Architecting the digital frontier for the world's most ambitious enterprises. Built for scale, security, and success.</p>
                 </div>
-                <div class="col-md-4 text-center my-4 my-md-0">
-                    <div class="d-flex justify-content-center gap-4">
-                        <a href="#home" class="text-decoration-none text-reset">Home</a>
-                        <a href="#services" class="text-decoration-none text-reset">Services</a>
-                        <a href="#about" class="text-decoration-none text-reset">About</a>
-                    </div>
+                <div class="col-lg-2">
+                    <h6 class="text-white fw-bold mb-4">Solutions</h6>
+                    <ul class="list-unstyled d-grid gap-2">
+                        <li><a href="#services" class="text-decoration-none text-reset hover-white">Cloud Strategy</a></li>
+                        <li><a href="#services" class="text-decoration-none text-reset hover-white">AI Automation</a></li>
+                        <li><a href="#services" class="text-decoration-none text-reset hover-white">Cybersecurity</a></li>
+                    </ul>
                 </div>
-                <div class="col-md-4 text-center text-md-end">
-                    <p class="mb-0 small">© 2024 NovaCore Digital. All rights reserved.</p>
+                <div class="col-lg-2">
+                    <h6 class="text-white fw-bold mb-4">Company</h6>
+                    <ul class="list-unstyled d-grid gap-2">
+                        <li><a href="#about" class="text-decoration-none text-reset hover-white">About Us</a></li>
+                        <li><a href="#contact" class="text-decoration-none text-reset hover-white">Contact</a></li>
+                        <li><a href="#advisor" class="text-decoration-none text-reset hover-white">AI Engine</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="my-5 border-secondary opacity-20">
+            <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-3">
+                <p class="mb-0 small">© 2024 NovaCore Digital Solutions Inc. All rights reserved.</p>
+                <div class="d-flex gap-4">
+                    <a href="#" class="text-reset"><small>Privacy</small></a>
+                    <a href="#" class="text-reset"><small>Terms</small></a>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Bootstrap JS Bundle -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="index.tsx"></script>
 </body>
